--- a/app/templates/general_layout.html
+++ b/app/templates/general_layout.html
@@ -37,6 +37,15 @@
 	<script type="text/javascript">
 		{% block script_area %}
 		{% endblock %}
+
+		// CSRF protection per page
+		$.ajaxSetup({
+			beforeSend: function(xhr, settings) {
+				if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) && !this.crossDomain) {
+					xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token() }}");
+				}
+			}
+		});
 	</script>
 
 </body>
