--- a/app/templates/library.html
+++ b/app/templates/library.html
@@ -21,11 +21,16 @@
 		<!-- Progress bar -->
 		<div class="progress_bar_display">
 			<div class="progress_bar_label">
-				Updating
+				<div class="spinner-border text-warning" role="status">
+					<span class="sr-only"></span>
+				</div>
+				<span>
+					Updating...
+				</span>
 			</div>
 			<div class="progress_bar_container">
-				<div class="progress" style="height: 1.5rem;">
-					<div class="progress-bar progress-bar-animated progress-bar-striped bg-warning" id="update_progress_bar"
+				<div class="progress" style="height: 0.5rem; background: #ffe26e;">
+					<div class="progress-bar bg-warning" id="update_progress_bar"
 						role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
 				</div>
 			</div>
